Change: update minecraft-java config

--- a/infra/games/minecraft-java/minecraft-java.yaml
+++ b/infra/games/minecraft-java/minecraft-java.yaml
@@ -47,7 +47,7 @@ spec:
       icon: https://www.freeiconspng.com/uploads/minecraft-enderman-icon-27.png
       difficulty: hard
       OVERRIDE_OPS: true
-      ops: 2535405985178539
+      ops: jazzlyin, tyriis
       gameMode: survival
       maxPlayers: 8
       onlineMode: false
