--- a/infra/automation/aircon/aircon-secret-sealed.yaml
+++ b/infra/automation/aircon/aircon-secret-sealed.yaml
@@ -2,7 +2,7 @@ apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
   creationTimestamp: null
-  name: aircon-secrets
+  name: aircon-secret
   namespace: automation
 spec:
   encryptedData:
@@ -15,5 +15,5 @@ spec:
     data: null
     metadata:
       creationTimestamp: null
-      name: aircon-secrets
+      name: aircon-secret
       namespace: automation
