Change: skip ssl check when scraping hass.k8s.home

--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -63,6 +63,8 @@ spec:
             scheme: https
             static_configs:
               - targets: ['hass.k8s.home']
+            tls_config:
+              insecure_skip_verify: true
 
 
           # - job_name: 'kubernetes-service-endpoints'
